# wild

./: .clang-format  .clangd  .editorconfig  CMakeLists.txt  README.md  wild.sln
include/: common.hpp  runnable.hpp
include/game/: game.hpp
include/game/entity/: entity.hpp  entity_metadata.hpp  living_entity.hpp  player.hpp
include/game/world/: world.hpp
include/interface/: console.hpp  logger.hpp
include/net/: client.hpp  server.hpp
include/net/crypto/: rsa_keypair.hpp
include/net/packet/: clientbound_packet.hpp  packet.hpp
include/util/: counter.hpp  random.hpp  util.hpp
lib/asio-1.28.0/: Makefile  config.status
lib/asio-1.28.0/include/: Makefile  asio.hpp
lib/asio-1.28.0/src/: Makefile
skyr/: main.cpp  skyr.cpp  skyr.h  skyr.vcxproj  skyr.vcxproj.filters
src/: CMakeLists.txt  main.cpp
src/game/: CMakeLists.txt  game.cpp
src/game/entity/: CMakeLists.txt  entity.cpp  entity_metadata.cpp  player.cpp
src/game/world/: CMakeLists.txt  world.cpp
src/net/: CMakeLists.txt  client.cpp  server.cpp
tests/: CMakeLists.txt
tests/server/: CMakeLists.txt  server_runs.cpp
wild/: client.cpp  client.h  clientbound_packet.cpp  clientbound_packet.h  common.h  console.h  counter.h  entity.cpp  entity.h  entity_metadata.cpp  entity_metadata.h  game.cpp  game.h  lfs.c  lfs.h  living_entity.h  lprefix.h  lua_machine.cpp  lua_machine.h  main.cpp  main.h  nibble_vector.h  packet.cpp  packet.h  packet_forms.cpp  player.cpp  player.h  random.h  server.cpp  server.h  thread_pool.h  util.h  wild.vcxproj  wild.vcxproj.filters  world.cpp  world.h
(+16 files in other folders)
